--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>ABRASELPB</title>
-        <link href="style.css" rel="stylesheet" />
-
-
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     </head> 
-    <body> 
-        Abrasel-pb
-    </body>
+<body style="margin:0px;padding:0px;overflow:hidden">
+    <iframe src="http://www.pb.abrasel.com.br/guia" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px"></iframe>
+</body>
 </html>
