--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
         <meta charset="UTF-8">
         <title>ABRASELPB</title>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+        <script type="text/javascript">
+            document.addEventListener("deviceready", onDeviceReady, false);
+            function onDeviceReady() {
+                spinnerplugin.show();
+                window.location = "http://www.pb.abrasel.com.br/guia";
+
+                document.addEventListener("online", onOnline, false);
+                document.addEventListener("offline", onOffline, false);
+                document.addEventListener("backbutton", function(e) {
+
+                    navigator.notification.confirm(
+                            'Você realmente deseja sair do aplicativo?',
+                            exitFromApp,
+                            'Sair',
+                            'Não,Sim'
+                            );
+
+                }, false);
+                spinnerplugin.hide();
+            }
+
+            function onOffline() {
+                showAlert('Sem conexão a internet!');
+            }
+
+            function onOnline() {
+            }
+        </script>
     </head> 
-<body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe src="http://www.pb.abrasel.com.br/guia" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px"></iframe>
-</body>
+    <body>
+        &nbsp;
+    </body>
 </html>
