--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
         <script type="text/javascript">
             document.addEventListener("deviceready", onDeviceReady, false);
             function onDeviceReady() {
-                spinnerplugin.show();
                 window.location = "http://www.pb.abrasel.com.br/guia";
 
                 document.addEventListener("online", onOnline, false);
                 document.addEventListener("offline", onOffline, false);
                 document.addEventListener("backbutton", function(e) {
 
-                    navigator.notification.confirm(
-                            'Você realmente deseja sair do aplicativo?',
-                            exitFromApp,
-                            'Sair',
-                            'Não,Sim'
-                            );
+                    /*navigator.notification.confirm(
+                     'Você realmente deseja sair do aplicativo?',
+                     exitFromApp,
+                     'Sair',
+                     'Não,Sim'
+                     );*/
+                    history.go(-1);
 
                 }, false);
-                spinnerplugin.hide();
             }
 
             function onOffline() {
