--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             function onDeviceReady() {
                 //window.location = "http://www.pb.abrasel.com.br/guia";
                 
-                var ref = window.open('http://apache.org');
+                //var ref = window.open('http://www.pb.abrasel.com.br/guia');
 
                 document.addEventListener("online", onOnline, false);
                 document.addEventListener("offline", onOffline, false);
